# fulgur

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  mise.toml
.beads/: README.md  config.yaml
.github/: cla-signatures.json
.github/workflows/: ci.yml  codeql.yml  release-prepare.yml  release-python.yml  release-ruby.yml  release.yml  update-examples.yml
crates/fulgur/: Cargo.toml
crates/fulgur-cli/: Cargo.toml
crates/fulgur-cli/src/: main.rs  plugin.rs
crates/fulgur-cli/tests/: plugin_dispatch.rs
crates/fulgur-ruby/: Cargo.toml
crates/fulgur-ruby/ext/fulgur/: Cargo.toml
crates/fulgur-ruby/lib/fulgur/: version.rb
crates/fulgur-vrt/: manifest.toml
crates/fulgur-vrt/fixtures/gcpm/: element-policy-first-except.html  element-policy-first.html  element-policy-last.html  element-policy-start.html  toc-target-counter-literal.html
crates/fulgur-vrt/fixtures/layout/: multicol-table-width.html  table-caption-top.html
crates/fulgur-wasm/: Cargo.toml
crates/fulgur-wpt/: Cargo.toml
crates/fulgur-wpt/expectations/: css-page.txt
crates/fulgur-wpt/expectations/lists/: caption.txt  multicol-1.txt  multicol-2.txt
crates/fulgur/src/: background.rs  blitz_adapter.rs  engine.rs  multicol_layout.rs  net.rs  pagination_layout.rs  paragraph.rs  render.rs  schema.rs
crates/fulgur/src/convert/: mod.rs  (+5 more)
crates/fulgur/tests/: abs_positioned_pagination.rs  in_flow_pagination_regression.rs  link_media_attribute.rs  render_smoke.rs
crates/pyfulgur/: Cargo.toml  pyproject.toml
docs/plans/: 2026-05-12-cli-plugin-mechanism-impl.md  2026-05-13-in-flow-300vh-regression.md  2026-05-16-target-text-pseudo-cascade-capture.md  2026-05-21-pdf-text-select-fix.md  2026-05-23-fulgur-da3u-counterpass-selector-specificity-design.md  2026-06-09-fulgur-puml-nested-abs-pagination.md  2026-06-17-table-caption-redesign.md
docs/superpowers/plans/: 2026-05-07-target-text-second-arg.md
examples/link-media/: README.md  index.html  styles.css
examples/wasm-demo/: README.md
scripts/wpt/: subset.txt
website/: pyproject.toml
(+12 files in other folders)
